@@ -9,11 +9,11 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>2.18.0-SNAPSHOT</version>
+    <version>2.18.2-SNAPSHOT</version>
   </parent>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-databind</artifactId>
-  <version>2.18.0-SNAPSHOT</version>
+  <version>2.18.2-SNAPSHOT</version>
   <name>jackson-databind</name>
   <packaging>jar</packaging>
   <description>General data-binding functionality for Jackson: works on core streaming API</description>
@@ -46,8 +46,7 @@
          Baseline compatibility:
 
          * Jackson 2.13 compatible with Android SDK 24 and up
-         * Jackson 2.14, 2.15 compatible with Android SDK 26 and up
-         * Jackson 2.16 compatible with Android SDK 26 and up
+         * Jackson 2.14 - 2.18 compatible with Android SDK 26 and up
 
       -->
     <version.android.sdk>26</version.android.sdk>
@@ -69,7 +68,7 @@
     <packageVersion.package>com.fasterxml.jackson.databind.cfg</packageVersion.package>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2024-02-27T01:47:51Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-10-28T23:22:37Z</project.build.outputTimestamp>
   </properties>
 
   <dependencyManagement>
@@ -332,17 +331,9 @@
               <release>11</release>
               <compilerArgs>
                 <arg>-parameters</arg>
-                <arg>--enable-preview</arg>
               </compilerArgs>
               <fork>true</fork>
               <useIncrementalCompilation>true</useIncrementalCompilation>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--enable-preview</argLine>
             </configuration>
           </plugin>
         </plugins>
